--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+body {
+  font-size: 16px;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
+    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: rgb(33, 37, 41);
+}
+.wrapper-outer {
+  padding: 40px;
+}
+.searchBox {
+  width: 241px;
+  height: 38px;
+  font-size: 16px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(206, 212, 218);
+  padding: 6px 12px;
+  border-radius: 4px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.searchBox:focus {
+  border-color: #7952b3;
+  box-shadow: 0 0 0 3px rgba(121, 82, 179, 0.25);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.searchBox:disabled {
+  background-color: rgb(233, 236, 239);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.table-wrapper {
+  margin-top: 20px;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  padding: 8px;
+  border: 1px solid rgb(222, 226, 230);
+}
+
+th {
+  font-weight: 700;
+}
+
+/* paination css  */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px 0;
+  list-style: none;
+}
+
+.page-item {
+  margin: 0 5px;
+}
+.page-link {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1.5;
+  color: #007bff;
+  background-color: #fff;
+  border: 1px solid rgb(222, 226, 230);
+  border-radius: 2px;
+  padding: 0 4px;
+  height: 24px;
+  text-decoration: none;
+}
+.pagination-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Pagination styles (refer to previous response) */
+
+.limit-input {
+  display: flex;
+  align-items: center;
+  margin-top: 10px; /* Adjust margin as needed */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.limit-input label {
+  margin-right: 5px;
+}
+
+.limit-input input {
+  width: 40px; /* Adjust width as needed */
+  text-align: center;
+  border: 1px solid rgb(222, 226, 230);
+  border-radius: 2px;
+  padding: 0 4px;
+  height: 24px;
 }
